@@ -1,12 +1,17 @@
 package com.neobank360.config;
+
 import jakarta.servlet.*;
 import jakarta.servlet.http.*;
 import lombok.RequiredArgsConstructor;
+
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -26,16 +31,28 @@ public class JwtAuthFilter extends OncePerRequestFilter {
             String token = header.substring(7);
 
             if (jwtUtil.validateToken(token)) {
-                String email = jwtUtil.extractEmail(token);
 
-                var auth = new org.springframework.security.authentication.UsernamePasswordAuthenticationToken(
-                        email, null, java.util.Collections.emptyList()
+                // ✅ Extract data from JWT
+                String email = jwtUtil.extractEmail(token);
+                String role = jwtUtil.extractRole(token);
+
+                // ✅ Create authorities
+                var authorities = List.of(
+                        new SimpleGrantedAuthority("ROLE_" + role)
+                );
+
+                // ✅ Set authentication
+                var auth = new UsernamePasswordAuthenticationToken(
+                        email,
+                        null,
+                        authorities
                 );
 
                 SecurityContextHolder.getContext().setAuthentication(auth);
             }
         }
 
+        // ✅ Continue filter chain (VERY IMPORTANT)
         filterChain.doFilter(request, response);
     }
 }
